# offline-clinical-note-assistant-backend

./: .dockerignore  .env.example  .gitignore  CRITICAL_FIX_APPLIED.md  CUDA_ERROR_FIX.md  CUDA_FIX_SUMMARY.md  Dockerfile  MEDGEMMA_NOT_WORKING.md  QUICKSTART.md  QUICK_FIX.md  README.md  URGENT_FIX.md  WHATS_NEW.md  docker-compose.yml  medgemma_colab_setup.ipynb  pyproject.toml  test_cuda_fix.py
app/: __init__.py  main.py
app/api/v1/: routes.py
app/api/v1/endpoints/: generate.py  health.py
app/core/: config.py  logging.py
app/schemas/: generate.py
app/services/: audit_logger.py  model_runner.py  prompt_builder.py  response_guard.py
app/templates/: discharge.txt  referral.txt  soap.txt
app/utils/: timing.py
tests/: test_api.py
